tests/errors/param-width.fil
import "primitives/core.fil";

comp Mac[#W]<G: 1>(a: [G, G+1] #W) -> () {
    A := new Add[32];
    a0 := A<G>(a, a);
}